Compilador/sintatico.output
Estado 15 conflitos: 5 de deslocamento/redução
Estado 69 conflitos: 5 de deslocamento/redução
Estado 80 conflitos: 5 de deslocamento/redução
Estado 83 conflitos: 5 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis T_INICIO $@2 lista_comandos T_FIMPROG

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_INTEIRO
   10     | T_LOGICO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 lista_comandos: lista_comandos comando
   14               | comando
   15               | ε

   16 comando: leitura
   17        | escrita
   18        | repeticao
   19        | selecao
   20        | atribuicao

   21 leitura: T_LEIA T_IDENTIF

   22 escrita: T_ESCREVA expressao
   23        | T_ESCREVA T_LITERAL

   24 $@3: ε

   25 $@4: ε

   26 repeticao: T_ENQUANTO $@3 expressao T_FACA $@4 lista_comandos T_FIMEQNTO

   27 $@5: ε

   28 $@6: ε

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   30 $@7: ε

   31 atribuicao: T_IDENTIF $@7 T_ATRIB expressao

   32 $@8: ε

   33 expressao: expressao T_MAIS $@8 expressao

   34 $@9: ε

   35 expressao: expressao T_MENOS $@9 expressao

   36 $@10: ε

   37 expressao: expressao T_VEZES $@10 expressao

   38 $@11: ε

   39 expressao: expressao T_DIV $@11 expressao

   40 $@12: ε

   41 expressao: expressao T_MAIOR $@12 expressao

   42 $@13: ε

   43 expressao: expressao T_MENOR $@13 expressao

   44 $@14: ε

   45 expressao: expressao T_IGUAL $@14 expressao
   46          | expressao T_E expressao
   47          | expressao T_OU expressao
   48          | termo

   49 termo: T_NUMERO
   50      | T_IDENTIF
   51      | T_V
   52      | T_F
   53      | T_NAO termo
   54      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIMPROG (260) 3
    T_LEIA (261) 21
    T_ESCREVA (262) 22 23
    T_SE (263) 29
    T_ENTAO (264) 29
    T_SENAO (265) 29
    T_FIMSE (266) 29
    T_ENQUANTO (267) 26
    T_FACA (268) 26
    T_FIMEQNTO (269) 26
    T_MAIS (270) 33
    T_MENOS (271) 35
    T_VEZES (272) 37
    T_DIV (273) 39
    T_MAIOR (274) 41
    T_MENOR (275) 43
    T_IGUAL (276) 45
    T_E (277) 46
    T_OU (278) 47
    T_NAO (279) 53
    T_ATRIB (280) 31
    T_ABRE (281) 54
    T_FECHA (282) 54
    T_INTEIRO (283) 9
    T_LOGICO (284) 10
    T_LITERAL (285) 23
    T_V (286) 51
    T_F (287) 52
    T_IDENTIF (288) 4 11 12 21 31 50
    T_NUMERO (289) 49


Não terminais com as regras onde eles aparecem

    $accept (35)
        à esquerda: 0
    programa (36)
        à esquerda: 3
        à direita: 0
    $@1 (37)
        à esquerda: 1
        à direita: 3
    $@2 (38)
        à esquerda: 2
        à direita: 3
    cabecalho (39)
        à esquerda: 4
        à direita: 3
    variaveis (40)
        à esquerda: 5 6
        à direita: 3
    declaracao_variaveis (41)
        à esquerda: 7 8
        à direita: 6 7
    tipo (42)
        à esquerda: 9 10
        à direita: 7 8
    lista_variaveis (43)
        à esquerda: 11 12
        à direita: 7 8 11
    lista_comandos (44)
        à esquerda: 13 14 15
        à direita: 3 13 26 29
    comando (45)
        à esquerda: 16 17 18 19 20
        à direita: 13 14
    leitura (46)
        à esquerda: 21
        à direita: 16
    escrita (47)
        à esquerda: 22 23
        à direita: 17
    repeticao (48)
        à esquerda: 26
        à direita: 18
    $@3 (49)
        à esquerda: 24
        à direita: 26
    $@4 (50)
        à esquerda: 25
        à direita: 26
    selecao (51)
        à esquerda: 29
        à direita: 19
    $@5 (52)
        à esquerda: 27
        à direita: 29
    $@6 (53)
        à esquerda: 28
        à direita: 29
    atribuicao (54)
        à esquerda: 31
        à direita: 20
    $@7 (55)
        à esquerda: 30
        à direita: 31
    expressao (56)
        à esquerda: 33 35 37 39 41 43 45 46 47 48
        à direita: 22 26 29 31 33 35 37 39 41 43 45 46 47 54
    $@8 (57)
        à esquerda: 32
        à direita: 33
    $@9 (58)
        à esquerda: 34
        à direita: 35
    $@10 (59)
        à esquerda: 36
        à direita: 37
    $@11 (60)
        à esquerda: 38
        à direita: 39
    $@12 (61)
        à esquerda: 40
        à direita: 41
    $@13 (62)
        à esquerda: 42
        à direita: 43
    $@14 (63)
        à esquerda: 44
        à direita: 45
    termo (64)
        à esquerda: 49 50 51 52 53 54
        à direita: 48 53


Estado 0

    0 $accept: • programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


Estado 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    3 programa: cabecalho • $@1 variaveis T_INICIO $@2 lista_comandos T_FIMPROG

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


Estado 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $padrão  reduzir usando a regra 4 (cabecalho)


Estado 5

    0 $accept: programa $end •

    $padrão  aceitar


Estado 6

    3 programa: cabecalho $@1 • variaveis T_INICIO $@2 lista_comandos T_FIMPROG

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 5 (variaveis)

    variaveis             ir ao estado 9
    declaracao_variaveis  ir ao estado 10
    tipo                  ir ao estado 11


Estado 7

    9 tipo: T_INTEIRO •

    $padrão  reduzir usando a regra 9 (tipo)


Estado 8

   10 tipo: T_LOGICO •

    $padrão  reduzir usando a regra 10 (tipo)


Estado 9

    3 programa: cabecalho $@1 variaveis • T_INICIO $@2 lista_comandos T_FIMPROG

    T_INICIO  deslocar, e ir ao estado 12


Estado 10

    6 variaveis: declaracao_variaveis •

    $padrão  reduzir usando a regra 6 (variaveis)


Estado 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 13

    lista_variaveis  ir ao estado 14


Estado 12

    3 programa: cabecalho $@1 variaveis T_INICIO • $@2 lista_comandos T_FIMPROG

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 15


Estado 13

   12 lista_variaveis: T_IDENTIF •

    $padrão  reduzir usando a regra 12 (lista_variaveis)


Estado 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   11 lista_variaveis: lista_variaveis • T_IDENTIF

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8
    T_IDENTIF  deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 8 (declaracao_variaveis)

    declaracao_variaveis  ir ao estado 17
    tipo                  ir ao estado 11


Estado 15

    3 programa: cabecalho $@1 variaveis T_INICIO $@2 • lista_comandos T_FIMPROG

    T_LEIA      deslocar, e ir ao estado 18
    T_ESCREVA   deslocar, e ir ao estado 19
    T_SE        deslocar, e ir ao estado 20
    T_ENQUANTO  deslocar, e ir ao estado 21
    T_IDENTIF   deslocar, e ir ao estado 22

    T_LEIA      [reduzir usando a regra 15 (lista_comandos)]
    T_ESCREVA   [reduzir usando a regra 15 (lista_comandos)]
    T_SE        [reduzir usando a regra 15 (lista_comandos)]
    T_ENQUANTO  [reduzir usando a regra 15 (lista_comandos)]
    T_IDENTIF   [reduzir usando a regra 15 (lista_comandos)]
    $padrão     reduzir usando a regra 15 (lista_comandos)

    lista_comandos  ir ao estado 23
    comando         ir ao estado 24
    leitura         ir ao estado 25
    escrita         ir ao estado 26
    repeticao       ir ao estado 27
    selecao         ir ao estado 28
    atribuicao      ir ao estado 29


Estado 16

   11 lista_variaveis: lista_variaveis T_IDENTIF •

    $padrão  reduzir usando a regra 11 (lista_variaveis)


Estado 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $padrão  reduzir usando a regra 7 (declaracao_variaveis)


Estado 18

   21 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 30


Estado 19

   22 escrita: T_ESCREVA • expressao
   23        | T_ESCREVA • T_LITERAL

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_LITERAL  deslocar, e ir ao estado 33
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    expressao  ir ao estado 38
    termo      ir ao estado 39


Estado 20

   29 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    expressao  ir ao estado 40
    termo      ir ao estado 39


Estado 21

   26 repeticao: T_ENQUANTO • $@3 expressao T_FACA $@4 lista_comandos T_FIMEQNTO

    $padrão  reduzir usando a regra 24 ($@3)

    $@3  ir ao estado 41


Estado 22

   31 atribuicao: T_IDENTIF • $@7 T_ATRIB expressao

    $padrão  reduzir usando a regra 30 ($@7)

    $@7  ir ao estado 42


Estado 23

    3 programa: cabecalho $@1 variaveis T_INICIO $@2 lista_comandos • T_FIMPROG
   13 lista_comandos: lista_comandos • comando

    T_FIMPROG   deslocar, e ir ao estado 43
    T_LEIA      deslocar, e ir ao estado 18
    T_ESCREVA   deslocar, e ir ao estado 19
    T_SE        deslocar, e ir ao estado 20
    T_ENQUANTO  deslocar, e ir ao estado 21
    T_IDENTIF   deslocar, e ir ao estado 22

    comando     ir ao estado 44
    leitura     ir ao estado 25
    escrita     ir ao estado 26
    repeticao   ir ao estado 27
    selecao     ir ao estado 28
    atribuicao  ir ao estado 29


Estado 24

   14 lista_comandos: comando •

    $padrão  reduzir usando a regra 14 (lista_comandos)


Estado 25

   16 comando: leitura •

    $padrão  reduzir usando a regra 16 (comando)


Estado 26

   17 comando: escrita •

    $padrão  reduzir usando a regra 17 (comando)


Estado 27

   18 comando: repeticao •

    $padrão  reduzir usando a regra 18 (comando)


Estado 28

   19 comando: selecao •

    $padrão  reduzir usando a regra 19 (comando)


Estado 29

   20 comando: atribuicao •

    $padrão  reduzir usando a regra 20 (comando)


Estado 30

   21 leitura: T_LEIA T_IDENTIF •

    $padrão  reduzir usando a regra 21 (leitura)


Estado 31

   53 termo: T_NAO • termo

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    termo  ir ao estado 45


Estado 32

   54 termo: T_ABRE • expressao T_FECHA

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    expressao  ir ao estado 46
    termo      ir ao estado 39


Estado 33

   23 escrita: T_ESCREVA T_LITERAL •

    $padrão  reduzir usando a regra 23 (escrita)


Estado 34

   51 termo: T_V •

    $padrão  reduzir usando a regra 51 (termo)


Estado 35

   52 termo: T_F •

    $padrão  reduzir usando a regra 52 (termo)


Estado 36

   50 termo: T_IDENTIF •

    $padrão  reduzir usando a regra 50 (termo)


Estado 37

   49 termo: T_NUMERO •

    $padrão  reduzir usando a regra 49 (termo)


Estado 38

   22 escrita: T_ESCREVA expressao •
   33 expressao: expressao • T_MAIS $@8 expressao
   35          | expressao • T_MENOS $@9 expressao
   37          | expressao • T_VEZES $@10 expressao
   39          | expressao • T_DIV $@11 expressao
   41          | expressao • T_MAIOR $@12 expressao
   43          | expressao • T_MENOR $@13 expressao
   45          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 47
    T_MENOS  deslocar, e ir ao estado 48
    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 22 (escrita)


Estado 39

   48 expressao: termo •

    $padrão  reduzir usando a regra 48 (expressao)


Estado 40

   29 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   33 expressao: expressao • T_MAIS $@8 expressao
   35          | expressao • T_MENOS $@9 expressao
   37          | expressao • T_VEZES $@10 expressao
   39          | expressao • T_DIV $@11 expressao
   41          | expressao • T_MAIOR $@12 expressao
   43          | expressao • T_MENOR $@13 expressao
   45          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao

    T_ENTAO  deslocar, e ir ao estado 56
    T_MAIS   deslocar, e ir ao estado 47
    T_MENOS  deslocar, e ir ao estado 48
    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55


Estado 41

   26 repeticao: T_ENQUANTO $@3 • expressao T_FACA $@4 lista_comandos T_FIMEQNTO

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    expressao  ir ao estado 57
    termo      ir ao estado 39


Estado 42

   31 atribuicao: T_IDENTIF $@7 • T_ATRIB expressao

    T_ATRIB  deslocar, e ir ao estado 58


Estado 43

    3 programa: cabecalho $@1 variaveis T_INICIO $@2 lista_comandos T_FIMPROG •

    $padrão  reduzir usando a regra 3 (programa)


Estado 44

   13 lista_comandos: lista_comandos comando •

    $padrão  reduzir usando a regra 13 (lista_comandos)


Estado 45

   53 termo: T_NAO termo •

    $padrão  reduzir usando a regra 53 (termo)


Estado 46

   33 expressao: expressao • T_MAIS $@8 expressao
   35          | expressao • T_MENOS $@9 expressao
   37          | expressao • T_VEZES $@10 expressao
   39          | expressao • T_DIV $@11 expressao
   41          | expressao • T_MAIOR $@12 expressao
   43          | expressao • T_MENOR $@13 expressao
   45          | expressao • T_IGUAL $@14 expressao
   46          | expressao • T_E expressao
   47          | expressao • T_OU expressao
   54 termo: T_ABRE expressao • T_FECHA

    T_MAIS   deslocar, e ir ao estado 47
    T_MENOS  deslocar, e ir ao estado 48
    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55
    T_FECHA  deslocar, e ir ao estado 59


Estado 47

   33 expressao: expressao T_MAIS • $@8 expressao

    $padrão  reduzir usando a regra 32 ($@8)

    $@8  ir ao estado 60


Estado 48

   35 expressao: expressao T_MENOS • $@9 expressao

    $padrão  reduzir usando a regra 34 ($@9)

    $@9  ir ao estado 61


Estado 49

   37 expressao: expressao T_VEZES • $@10 expressao

    $padrão  reduzir usando a regra 36 ($@10)

    $@10  ir ao estado 62


Estado 50

   39 expressao: expressao T_DIV • $@11 expressao

    $padrão  reduzir usando a regra 38 ($@11)

    $@11  ir ao estado 63


Estado 51

   41 expressao: expressao T_MAIOR • $@12 expressao

    $padrão  reduzir usando a regra 40 ($@12)

    $@12  ir ao estado 64


Estado 52

   43 expressao: expressao T_MENOR • $@13 expressao

    $padrão  reduzir usando a regra 42 ($@13)

    $@13  ir ao estado 65


Estado 53

   45 expressao: expressao T_IGUAL • $@14 expressao

    $padrão  reduzir usando a regra 44 ($@14)

    $@14  ir ao estado 66


Estado 54

   46 expressao: expressao T_E • expressao

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    expressao  ir ao estado 67
    termo      ir ao estado 39


Estado 55

   47 expressao: expressao T_OU • expressao

    T_NAO      deslocar, e ir ao estado 31
    T_ABRE     deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 34
    T_F        deslocar, e ir ao estado 35
    T_IDENTIF  deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37

    expressao  ir ao estado 68
    termo      ir ao estado 39


Estado 56

   29 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $padrão  reduzir usando a regra 27 ($@5)

    $@5  ir ao estado 69


Estado 57
